chore: cleaning up some old components and revamping content

--- a/data/config.json
+++ b/data/config.json
@@ -5,7 +5,7 @@
   "location": "United States",
   "title": "Builder & Technologist",
   "intro": "Husband, father, and technologist. Software Engineering Manager and chronic entrepreneur. I love building, tinkering, and learning new things. Addicted to coffee and X (Twitter).",
-  "bio": "I'm a product-minded technologist with 10+ years of experience building zero-to-one products. At Morgan Stanley, I lead five greenfield client-facing planning apps across E*TRADE and MS platforms, managing 12 engineers across 3 global squads. I earned the Tesla Award for Innovation and was a finalist in the OpenAI Hackathon, where I built Nevernote, an AI tool that turns meetings into structured docs using summarization pipelines.\n\nI recently launched an internal AI bootcamp to teach LLMs, Copilot, and AI-assisted workflows, accelerating adoption across our org.\n\nI'm also the founder of Forwheel, a platform serving 150+ food trucks, powered by our AI vendor advisor Garnish (OpenAI + RAG). I co-founded Rbitrage Capital, growing it to $750K AUM via crypto trading algorithms.",
+  "bio": "I'm a product-minded technologist with 10+ years of experience building zero-to-one products. At Morgan Stanley, I led five greenfield client-facing apps across E*TRADE and Morgan Stanley Online, managing 12 engineers. \n\nI recently launched an internal AI bootcamp to teach devs how to use LLMs, Copilot, and AI-assisted workflows, accelerating adoption across our org.\n\nI'm also the founder of Forwheel, a platform serving 150+ food trucks, powered by our AI vendor advisor Garnish (OpenAI + RAG). I previously co-founded Rbitrage Capital, growing it to $750K AUM via crypto trading algorithms.",
   "avatarUrl": "/avatar.jpg",
   "resumeUrl": "/resume.pdf"
 }
